<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_registration_bg"
    tools:context="com.example.esport_service.CategoryActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/news_category"
        android:textColor="@color/purple_white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/first_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <ImageView
            android:id="@+id/clash_royale"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/clash_royale"
            android:src="@drawable/clashroyale"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/csgo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:src="@drawable/csgo"
            android:contentDescription="@string/csgo"/>

        <ImageView
            android:id="@+id/fortnite"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/fortnite"
            android:src="@drawable/fortnite"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>