<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#394658"
    android:id="@+id/coursePageBg"
    tools:context="com.example.esport_service.CoursePage">

    <ImageView
        android:id="@+id/coursePageImage"
        android:layout_width="410dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:transitionName="courseImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clashroyale2" />

    <TextView
        android:id="@+id/coursePageTitle"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/plan"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursePageImage" />


    <TextView
        android:id="@+id/coursePageText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/course_desc"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/appToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursePageTitle" />

    <ImageButton
        android:id="@+id/appToCart"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:onClick="addToCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_shop"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>